fix chat panel overflow on long bevy name

--- a/public/less/chat/ChatPanel.less
+++ b/public/less/chat/ChatPanel.less
@@ -49,6 +49,8 @@
 				color: #fff;
 				text-align: left;
 				text-shadow: 0px 0px 5px rgba(0,0,0,.5);
+				height: 22px;
+				overflow: hidden;
 				&:hover, &:active, &:focus {
 					text-decoration: none;
 					color: #e6e6e6;
